--- a/config.json
+++ b/config.json
@@ -59,5 +59,20 @@
         }
       ]
     }
+    ,
+    {
+      "id": "fastapi-rest-apis",
+      "title": "Construindo APIs REST com FastAPI",
+      "description": "Criar uma API REST básica com FastAPI: rotas, validação e operações CRUD.",
+      "path": "assignments/fastapi-rest-apis",
+      "dueDate": "2026-01-15",
+      "attachments": [
+        {
+          "name": "Starter Code",
+          "file": "starter-code.py",
+          "type": "python"
+        }
+      ]
+    }
   ]
 }
